--- a/historia.html
+++ b/historia.html
@@ -57,7 +57,7 @@
     <div class="contenido">
         <aside class="contenido__menu">
             <!--LOGO-->
-            <a href="index.html"><img class="contenido__logo"
+            <a href="index.html"><img class="logo__img"
                     src="https://cdn2.iconfinder.com/data/icons/japan-flat-2/340/japan_carp_fish_koi_nature_water-512.png"
                     alt="home"></a>
             <nav class="menu">
