--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <div class="contenido">
         <aside class="contenido__menu">
             <!--LOGO-->
-            <a href="index.html"><img class="contenido__logo"
-                    src="https://cdn2.iconfinder.com/data/icons/japan-flat-2/340/japan_carp_fish_koi_nature_water-512.png"
-                    alt="home"></a>
+            <a class="contenido__logo" href="index.html"><img class="logo__img"
+                src="https://cdn2.iconfinder.com/data/icons/japan-flat-2/340/japan_carp_fish_koi_nature_water-512.png"
+                alt="home" /></a>
             <nav class="menu">
                 <ul>
                     <li class="menu__item"><a href="historia.html">HISTORIA</a></li>
