Se modificó titulo header

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--inicio de header-->
     <header class="header">
         <div class="header__titulo">
-            <h1>KoiInk tattoo studio</h1>
+            <h1>KoiInk tattoo studio and skin design</h1>
         </div>
         <nav class="red-social">
             <ul class="red-social__list">
